hard-gists/1192059/run.log
=== Docker Run Log for 1192059 ===
Started at: Mi 29. Okt 11:58:15 CET 2025

[2025-10-29 11:58:15] START: Running container for 1192059
[2025-10-29 11:58:16] SUCCESS: Container 9d0e711a8e89d251fcf9ef122ebcac7a821beaff4e80ff8e025c5bdc00b3e5fe started for 1192059
=== Container logs for 1192059 ===
  File "/snippet.py", line 75
    print decrypted == s
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1192059 ===
[2025-10-29 11:58:18] INFO: Container 9d0e711a8e89d251fcf9ef122ebcac7a821beaff4e80ff8e025c5bdc00b3e5fe has stopped
